# IntegralEmbeddedTracing

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: protocol.md
include/: fast_copy.h  seven_bit_encoding.h  trace_controller.h  trace_header.h  trace_types.h
include/IntegralEmbeddedTracing/: TraceController.h  TraceDataHeader.h  TraceTypes.h
include/IntegralEmbeddedTracing/Trace/: ArrayTrace.h  Trace.h  VariableTrace.h
include/trace/: array_trace.h  trace.h  variable_trace.h
include/trace_communication/: buffer_trace_communication.h  trace_communication.h
src/: TraceController.cpp  TraceDataHeader.cpp  seven_bit_encoding.cpp  trace_controller.cpp  trace_header.cpp  trace_types.cpp
src/trace_communication/: buffer_trace_communication.cpp  trace_communication.cpp
tests/: buffer_trace_communication_tests.cpp  seven_bit_encoding_tests.cpp  trace_header_tests.cpp  tracer_tests.cpp
